# docker-to-docker-exec-test

./: .gitignore  README.md
dockerfiles/: docker-compose.yml
dockerfiles/executor/: Dockerfile
dockerfiles/executor/executor/: Cargo.toml  accompanyments.csv
dockerfiles/executor/executor/src/: main.rs
dockerfiles/middleman_server/: Cargo.toml
dockerfiles/middleman_server/src/: main.rs
dockerfiles/server/: Dockerfile
dockerfiles/server/remote_server/: Cargo.toml
dockerfiles/server/remote_server/src/: main.rs
dockerfiles/server/server/: Cargo.toml
dockerfiles/server/server/src/: main.rs
