[package]
name = "ds_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
axum =  { version = "0.6", features = ["ws", "headers"] }
serde =  { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "net", "time", "macros", "sync", "fs"] }
tokio-stream = { version = "0.1.8", features = ["sync", "fs", "io-util"] }
tokio-util = "0.7.4"
tracing = "0.1"
tracing-subscriber = "0.3"